# ctf

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  config.json  config.yaml  dashboard_server.py  pyproject.toml  recap.py  requirements.txt  setup.cfg  simulate.py  tournament.py
agents/: agent_defender.py  agent_scout.py
arena/: __init__.py  arena.py  events.py
ctf/: __init__.py  cli.py  coach.py  coach_mock.py  dashboard_server.py  renderer.py  simulate.py  tournament.py
ctf/agents/: agent_attacker.py  agent_base.py
ctf/arena/: __init__.py  arena.py  game_objects.py  map_loader.py  scoreboard.py
ctf/cli/: coach.py  dashboard.py  sim.py  tournament.py
ctf/dashboard/: index.html
ctf/teams/: team_alpha.py  team_bravo.py
teams/: __init__.py  team_bravo.py
tests/: conftest.py  test_deterministic.py
