
[metadata]
name = ctf
version = 0.2.1
description = Capture the Flag workshop package
author = Don Walling
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Topic :: Games/Entertainment :: Simulation
    Topic :: Education

[options]
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
include =
    arena
    agents
    teams
    ctf

[options.extras_require]
dev =
    pytest
    pygame
    openai

[options.entry_points]
console_scripts =
    ctf-sim = ctf.cli:sim_main
    ctf-tourney = ctf.cli:tourney_main
    ctf-recap = ctf.cli:recap_main
    ctf-coach = ctf.cli:coach_main
    ctf-coach-mock = ctf.cli:coach_mock_main
    ctf-dashboard = ctf.cli:dashboard_main
    ctf-bot = ctf.cli:bot_init_team_main
    ctf-eval = ctf.cli:eval_main
